--- a/index.html
+++ b/index.html
@@ -222,8 +222,14 @@
                 </div>
                 <!--// end row -->
                 <h3>Meeting 1</h3>
-                <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRQ1mjsHGWEbT-HOBsnKJO1Z8J3oW4wPVxQ4O06iDajxnbRdMrH80oBNl849aNfVJ8XF-k1AwwJwpOD/embed?start=false&loop=false&delayms=3000" frameborder="0" width="100%" height="400px" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-                <iframe frameborder="0" width="100%" height="600px" src="https://repl.it/MQ7W?lite=true"></iframe>
+                <table style="width:100%">
+                    <tr>
+                        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRQ1mjsHGWEbT-HOBsnKJO1Z8J3oW4wPVxQ4O06iDajxnbRdMrH80oBNl849aNfVJ8XF-k1AwwJwpOD/embed?start=false&loop=false&delayms=3000" frameborder="0" width="50%" height="500px" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+                    </tr>
+                    <tr>
+                        <iframe frameborder="0" width="50%" height="500px" src="https://repl.it/MQ7W?lite=true"></iframe>
+                    </tr>
+                </table>
                 <div class="row">
                     <!-- Latest Products -->
                     <div class="col-sm-4 sm-margin-b-50">
