update about section (added topics)

--- a/index.html
+++ b/index.html
@@ -141,6 +141,15 @@
                         <img class="full-width img-responsive wow fadeInUp" src="img/500x500/03.jpg" alt="Portfolio Image" data-wow-duration=".3" data-wow-delay=".4s">
                     </div>
                 </div>
+                <h2>Things that we will be covering this year:</h2>
+                <ul>
+                    <li>Variable types</li>
+                    <li>Mathematical Operators</li>
+                    <li>Conditionals and Loops</li>
+                    <li>Methods</li>
+                    <li>Data Structures</li>
+                    <li>Object-Oriented Programming Concepts</li>
+                </ul>
                 <!-- End Masonry Grid -->
             </div>
             
