--- a/index.html
+++ b/index.html
@@ -358,33 +358,27 @@
                     <div class="row">
                         <!-- Contact List -->
                         <div class="col-sm-4 sm-margin-b-50">
-                            <h3><a href="#">New York</a> <span class="text-uppercase margin-l-20">Head Office</span></h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
+                            <h3><a href="#">Kevin Meng</a> <span class="text-uppercase margin-l-20">President</span></h3>
                             <ul class="list-unstyled contact-list">
-                                <li><i class="margin-r-10 color-base icon-call-out"></i> 1 012 3456 7890</li>
-                                <li><i class="margin-r-10 color-base icon-envelope"></i> hq@aitOnepage.com</li>
+                                <li><i class="margin-r-10 color-base icon-envelope"></i><a href="mailto:kevin.meng.01@gmail.com">kevin.meng.01@gmail.com</a></li>
                             </ul>
                         </div>
                         <!-- End Contact List -->
 
                         <!-- Contact List -->
                         <div class="col-sm-4 sm-margin-b-50">
-                            <h3><a href="#">London</a> <span class="text-uppercase margin-l-20">Operation</span></h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
+                            <h3><a href="#">Christopher Zhou</a> <span class="text-uppercase margin-l-20">Co-Vice President</span></h3>
                             <ul class="list-unstyled contact-list">
-                                <li><i class="margin-r-10 color-base icon-call-out"></i> 44 77 3456 7890</li>
-                                <li><i class="margin-r-10 color-base icon-envelope"></i> operation@AitOnepage.com</li>
+                                <li><i class="margin-r-10 color-base icon-envelope"></i><a href="mailto:cxqzhou88@gmail.com">cxqzhou88@gmail.com</a></li>
                             </ul>
                         </div>
                         <!-- End Contact List -->
 
                         <!-- Contact List -->
                         <div class="col-sm-4 sm-margin-b-50">
-                            <h3><a href="#">Singapore</a> <span class="text-uppercase margin-l-20">Finance</span></h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
+                            <h3><a href="#">Nihar Annam</a> <span class="text-uppercase margin-l-20">Co-Vice President</span></h3>
                             <ul class="list-unstyled contact-list">
-                                <li><i class="margin-r-10 color-base icon-call-out"></i> 50 012 456 7890</li>
-                                <li><i class="margin-r-10 color-base icon-envelope"></i> finance@AitOnepage.com</li>
+                                <li><i class="margin-r-10 color-base icon-envelope"></i><a href="mailto:nihar.annam@gmail.com">nihar.annam@gmail.com</a></li>
                             </ul>
                         </div>
                         <!-- End Contact List -->
@@ -393,9 +387,6 @@
                 </div>
             </div>
             <!-- End Contact List -->
-            
-            <!-- Google Map -->
-            <div id="map" class="map height-300"></div>
         </div>
         <!-- End Contact -->
         <!--========== END PAGE LAYOUT ==========-->
