--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                 <div class="row margin-b-40">
                     <div class="col-sm-6">
                         <h2>Weekly Meetings</h2>
-                        <p>Here, you'll find each week's lecture notes and an Java IDE/Editor for use in and out of meetings.</p>
+                        <p>Here, you'll find each week's lecture notes and a Java IDE/Editor.</p>
                     </div>
                 </div>
                 <!--// end row -->
