update about and meetings interface/information

--- a/index.html
+++ b/index.html
@@ -116,31 +116,37 @@
         <!-- About -->
         <div id="about">
             <div class="content-lg container">
-                <!-- Masonry Grid -->
-                <div class="masonry-grid row">
-                    <div class="masonry-grid-sizer col-xs-6 col-sm-6 col-md-1"></div>
-                    <div class="masonry-grid-item col-xs-12 col-sm-6 col-md-4 sm-margin-b-30">
-                        <div class="margin-b-60">
-                            <h2>Kevin Meng</h2>
-                            <p>Current President of Jasper Computer Science Club</p>
-                        </div>
+                <h2>Our 2017-2018 Leadership Team</h2>
+                <div class="row">
+                    <!-- Contact List -->
+                    <div class="col-sm-4 sm-margin-b-50">
+                        <h3><a href="#">Kevin Meng</a> <span class="text-uppercase margin-l-20">President</span></h3>
+                        <ul class="list-unstyled contact-list">
+                            <li><i class="margin-r-10 color-base icon-envelope"></i><a href="mailto:kevin.meng.01@gmail.com">kevin.meng.01@gmail.com</a></li>
+                        </ul>
                         <img class="full-width img-responsive wow fadeInUp" src="img/500x500/01.jpg" alt="Portfolio Image" data-wow-duration=".3" data-wow-delay=".2s">
+                        <br>
                     </div>
-                    <div class="masonry-grid-item col-xs-12 col-sm-6 col-md-4">
-                        <div class="margin-b-60">
-                            <img class="full-width img-responsive wow fadeInUp" src="img/500x500/02.jpg" alt="Portfolio Image" data-wow-duration=".3" data-wow-delay=".3s">
-                        </div>
-                        <h2>Christopher Zhou</h2>
-                        <p>Current Co-Vice President of Jasper Computer Science Club</p>
+                    <div class="col-sm-4 sm-margin-b-50">
+                        <h3><a href="#">Christopher Zhou</a> <span class="text-uppercase margin-l-20">Co-Vice President</span></h3>
+                        <ul class="list-unstyled contact-list">
+                            <li><i class="margin-r-10 color-base icon-envelope"></i><a href="mailto:cxqzhou88@gmail.com">cxqzhou88@gmail.com</a></li>
+                        </ul>
+                        <img class="full-width img-responsive wow fadeInUp" src="img/500x500/01.jpg" alt="Portfolio Image" data-wow-duration=".3" data-wow-delay=".2s">
+                        <br>
                     </div>
-                    <div class="masonry-grid-item col-xs-12 col-sm-6 col-md-4">
-                        <div class="margin-t-60 margin-b-60">
-                            <h2>Nihar Annam</h2>
-                            <p>Current Co-Vice President of Jasper Computer Science Club</p>
-                        </div>
-                        <img class="full-width img-responsive wow fadeInUp" src="img/500x500/03.jpg" alt="Portfolio Image" data-wow-duration=".3" data-wow-delay=".4s">
+                    <div class="col-sm-4 sm-margin-b-50">
+                        <h3><a href="#">Nihar Annam</a> <span class="text-uppercase margin-l-20">Co-Vice President</span></h3>
+                        <ul class="list-unstyled contact-list">
+                            <li><i class="margin-r-10 color-base icon-envelope"></i><a href="mailto:nihar.annam@gmail.com">nihar.annam@gmail.com</a></li>
+                        </ul>
+                        <img class="full-width img-responsive wow fadeInUp" src="img/500x500/01.jpg" alt="Portfolio Image" data-wow-duration=".3" data-wow-delay=".2s">
+                        <br>
                     </div>
+                    <!-- End Contact List -->
                 </div>
+                <br><br><br>
+                <!--// end row -->
                 <h2>Things that we will be covering this year:</h2>
                 <ul>
                     <li>Variable types</li>
@@ -226,7 +232,8 @@
                 <div class="row margin-b-40">
                     <div class="col-sm-6">
                         <h2>Weekly Meetings</h2>
-                        <p>Here, you'll find each week's lecture notes and a Java IDE/Editor.</p>
+                        <p>Here, you'll find this week's lecture notes and a Java IDE/Editor.</p>
+                        <a href="https://drive.google.com/open?id=0BxdduvOw1kDYM1NFXzNYZUh6ZVk" target="blank"><font size="3" color="blue"><u>All lecture slides</u></font></a>
                     </div>
                 </div>
                 <!--// end row -->
@@ -235,21 +242,6 @@
                     <tr><iframe src="www.google.com" frameborder="0" width="50%" height="500px" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe></tr>
                     <tr><iframe frameborder="0" width="50%" height="500px" src="https://repl.it/MQ7W?lite=true"></iframe></tr>
                 </table><br>
-                <h3>Meeting 3</h3>
-                <table style="width:100%">
-                    <tr><iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRBhB9Z5B_WREAtnHlUTbStk1BMc_YyAhBlQmBn6sHOUewWRHOONPRm3FWIISnsA4NExQTDIc5gtvoh/embed?start=false&loop=false&delayms=3000" frameborder="0" width="50%" height="500px" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe></tr>
-                    <tr><iframe frameborder="0" width="50%" height="500px" src="https://repl.it/MQ7W?lite=true"></iframe></tr>
-                </table><br>
-                <h3>Meeting 2</h3>
-                <table style="width:100%">
-                    <tr><iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSDDOqS0Lb1BNtxdWzpdKmPU5Edlf3iRosEfMk-cjUtKa2mPDXhZrazt1NNw-zX-y0KQGMQdQkjY_kG/embed?start=false&loop=false&delayms=3000" frameborder="0" width="50%" height="500px" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe></tr>
-                    <tr><iframe frameborder="0" width="50%" height="500px" src="https://repl.it/MQ7W?lite=true"></iframe></tr>
-                </table><br>
-                <h3>Meeting 1</h3>
-                <table style="width:100%">
-                    <tr><iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRQ1mjsHGWEbT-HOBsnKJO1Z8J3oW4wPVxQ4O06iDajxnbRdMrH80oBNl849aNfVJ8XF-k1AwwJwpOD/embed?start=false&loop=false&delayms=3000" frameborder="0" width="50%" height="500px" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe></tr>
-                    <tr><iframe frameborder="0" width="50%" height="500px" src="https://repl.it/MQ7W?lite=true"></iframe></tr>
-                </table>
             </div>
         </div>
         <!-- End Weekly Meetings -->
