change year to semester - we will be doing algorithms and GUI later

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 </div>
                 <br><br><br>
                 <!--// end row -->
-                <h2>Things that we will be covering this year:</h2>
+                <h2>Things  we will be covering this semester:</h2>
                 <ul>
                     <li>Variable types</li>
                     <li>Mathematical Operators</li>
