--- a/index.html
+++ b/index.html
@@ -92,18 +92,7 @@
                         <div class="carousel-centered">
                             <div class="margin-b-40">
                                 <h1 class="carousel-title">Jasper High School<br>Computer Science Club</h1>
-                                <p class="color-white"><font size="4"><b>Our mission: To provide members with the opportunity to gain valuable programming skills<br>fundamental to the study of computer science in a welcoming and helpful environment</b></font></p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <img class="img-responsive" src="img/1920x1080/02.jpg" alt="Slider Image">
-                    <div class="container">
-                        <div class="carousel-centered">
-                            <div class="margin-b-40">
-                                <h2 class="carousel-title">Jasper High School Computer Science Club</h2>
-                                <p class="color-white"><font size="4"><b>Our mission: To provide members with the opportunity to gain valuable programming skills<br>fundamental to the study of computer science in a welcoming and helpful environment</b></font></p>
+                                <p class="color-white"><font size="5"><b>Our mission: To provide members with the opportunity to gain valuable programming skills<br>fundamental to the study of computer science in a welcoming and helpful environment</b></font></p>
                             </div>
                         </div>
                     </div>
@@ -120,134 +109,68 @@
                 <div class="row">
                     <!-- Contact List -->
                     <div class="col-sm-4 sm-margin-b-50">
-                        <h3><a href="#">Kevin Meng</a> <span class="text-uppercase margin-l-20">President</span></h3>
-                        <ul class="list-unstyled contact-list">
-                            <li><i class="margin-r-10 color-base icon-envelope"></i><a href="mailto:kevin.meng.01@gmail.com">kevin.meng.01@gmail.com</a></li>
-                        </ul>
+                        <h3><a href="#">Kevin Meng</a> <span class="text-uppercase margin-l-20"><font size="3"><b>President</b></font></span></h3>
+                        <img class="full-width img-responsive wow fadeInUp" src="img/km_headshot.jpg" alt="Portfolio Image" data-wow-duration=".3" data-wow-delay=".2s">
+                        <br>
+                    </div>
+                    <div class="col-sm-4 sm-margin-b-50">
+                        <h3><a href="#">Christopher Zhou</a> <span class="text-uppercase margin-l-20"><font size="3"><b>Vice President</b></font></span></h3>
                         <img class="full-width img-responsive wow fadeInUp" src="img/500x500/01.jpg" alt="Portfolio Image" data-wow-duration=".3" data-wow-delay=".2s">
                         <br>
                     </div>
                     <div class="col-sm-4 sm-margin-b-50">
-                        <h3><a href="#">Christopher Zhou</a> <span class="text-uppercase margin-l-20">Co-Vice President</span></h3>
-                        <ul class="list-unstyled contact-list">
-                            <li><i class="margin-r-10 color-base icon-envelope"></i><a href="mailto:cxqzhou88@gmail.com">cxqzhou88@gmail.com</a></li>
-                        </ul>
-                        <img class="full-width img-responsive wow fadeInUp" src="img/500x500/01.jpg" alt="Portfolio Image" data-wow-duration=".3" data-wow-delay=".2s">
-                        <br>
-                    </div>
-                    <div class="col-sm-4 sm-margin-b-50">
-                        <h3><a href="#">Nihar Annam</a> <span class="text-uppercase margin-l-20">Co-Vice President</span></h3>
-                        <ul class="list-unstyled contact-list">
-                            <li><i class="margin-r-10 color-base icon-envelope"></i><a href="mailto:nihar.annam@gmail.com">nihar.annam@gmail.com</a></li>
-                        </ul>
+                        <h3><a href="#">Nihar Annam</a> <span class="text-uppercase margin-l-20"><font size="3"><b>Vice President</b></font></span></h3>
                         <img class="full-width img-responsive wow fadeInUp" src="img/500x500/01.jpg" alt="Portfolio Image" data-wow-duration=".3" data-wow-delay=".2s">
                         <br>
                     </div>
                     <!-- End Contact List -->
                 </div>
-                <br><br><br>
+                <br><br>
                 <!--// end row -->
-                <h2>Things  we will be covering this semester:</h2>
-                <ul>
-                    <li>Variable types</li>
-                    <li>Mathematical Operators</li>
-                    <li>Conditionals and Loops</li>
-                    <li>Methods</li>
-                    <li>Data Structures</li>
-                    <li>Object-Oriented Programming Concepts</li>
-                </ul>
                 <!-- End Masonry Grid -->
-            </div>
-            
-            <div class="bg-color-sky-light">
-                <div class="content-lg container">
-                    <div class="row">
-                        <div class="col-md-5 col-sm-5 md-margin-b-60">
-                            <div class="margin-t-50 margin-b-30">
-                                <h2>Why Choose Us?</h2>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                            </div>
-                            <a href="#" class="btn-theme btn-theme-sm btn-white-bg text-uppercase">Explore</a>
-                        </div>
-                        <div class="col-md-5 col-sm-7 col-md-offset-2">
-                            <!-- Accordion -->
-                            <div class="accordion">
-                                <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-                                    <div class="panel panel-default">
-                                        <div class="panel-heading" role="tab" id="headingOne">
-                                            <h4 class="panel-title">
-                                                <a class="panel-title-child" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                                    Exceptional Frontend Framework
-                                                </a>
-                                            </h4>
-                                        </div>
-                                        <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-                                            <div class="panel-body">
-                                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch.
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="panel panel-default">
-                                        <div class="panel-heading" role="tab" id="headingTwo">
-                                            <h4 class="panel-title">
-                                                <a class="collapsed panel-title-child" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                                    Modern Design Trends
-                                                </a>
-                                            </h4>
-                                        </div>
-                                        <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-                                            <div class="panel-body">
-                                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch.
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="panel panel-default">
-                                        <div class="panel-heading" role="tab" id="headingThree">
-                                            <h4 class="panel-title">
-                                                <a class="collapsed panel-title-child" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                                    Beatifully Crafted Code
-                                                </a>
-                                            </h4>
-                                        </div>
-                                        <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
-                                            <div class="panel-body">
-                                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch.
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- End Accodrion -->
-                        </div>
-                    </div>
-                    <!--// end row -->
-                </div>
+                <table style="width:100%">
+                    <tr>
+                        <td>
+                            <h2>Things  we will be covering this semester:</h2>
+                            <ul>
+                                <li>Variable types</li>
+                                <li>Mathematical Operators</li>
+                                <li>Conditionals and Loops</li>
+                                <li>Methods</li>
+                                <li>Data Structures</li>
+                                <li>Object-Oriented Programming Concepts</li>
+                            </ul>
+                        </td>
+                        <td><img src="img/java.png" width="300px" height="150px"></td>
+                    </tr>
+                </table>
             </div>
         </div>
         <!-- End About -->
 
         <!-- Weekly Meetings -->
-        <div id="meetings">
-            <div class="content-lg container">
-                <div class="row margin-b-40">
-                    <div class="col-sm-6">
-                        <h2>Weekly Meetings</h2>
-                        <p>Here, you'll find this week's lecture notes and a Java IDE/Editor.</p>
-                        <a href="https://drive.google.com/open?id=0BxdduvOw1kDYM1NFXzNYZUh6ZVk" target="blank"><font size="3" color="blue"><u>All lecture slides</u></font></a>
+        <div class="bg-color-sky-light">
+            <div id="meetings">
+                <div class="content-lg container">
+                    <div class="row margin-b-40">
+                        <div class="col-sm-6">
+                            <h2>Weekly Meetings</h2>
+                            <p>Here, you'll find this week's lecture notes and a Java IDE/Editor.</p>
+                            <a href="https://drive.google.com/open?id=0BxdduvOw1kDYM1NFXzNYZUh6ZVk" target="blank"><font size="3" color="blue"><u>All lecture slides</u></font></a>
+                        </div>
                     </div>
+                    <!--// end row -->
+                    <h3>Meeting 4</h3>
+                    <table style="width:100%">
+                        <tr><iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSEBAOSBx-2yRTYEGkngCyhyHu6NqLS2AnYFDXtRFQI6qZ0Q5CQ9gPi69lVDBFENUX1iQJZ5RFD26cK/embed?start=false&loop=false&delayms=3000" frameborder="0" width="50%" height="500px" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe></tr>
+                        <tr><iframe frameborder="0" width="50%" height="500px" src="https://repl.it/MQ7W?lite=true"></iframe></tr>
+                    </table><br>
                 </div>
-                <!--// end row -->
-                <h3>Meeting 4</h3>
-                <table style="width:100%">
-                    <tr><iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSEBAOSBx-2yRTYEGkngCyhyHu6NqLS2AnYFDXtRFQI6qZ0Q5CQ9gPi69lVDBFENUX1iQJZ5RFD26cK/embed?start=false&loop=false&delayms=3000" frameborder="0" width="50%" height="500px" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe></tr>
-                    <tr><iframe frameborder="0" width="50%" height="500px" src="https://repl.it/MQ7W?lite=true"></iframe></tr>
-                </table><br>
             </div>
         </div>
         <!-- End Weekly Meetings -->
         <!-- Awards -->
         <div id="awards">
-            <div class="bg-color-sky-light" data-auto-height="true">
                 <div class="content-lg container">
                     <div class="row margin-b-40">
                         <div class="col-sm-6">
@@ -337,44 +260,23 @@
                     </div>
                     <!--// end row -->
                 </div>
-            </div>
         </div>
         <!-- End Service -->
             
         <!-- Contact -->
         <div id="contact">
             <!-- Contact List -->
-            <div class="section-seperator">
-                <div class="content-lg container">
-                    <div class="row">
-                        <!-- Contact List -->
-                        <div class="col-sm-4 sm-margin-b-50">
-                            <h3><a href="#">Kevin Meng</a> <span class="text-uppercase margin-l-20">President</span></h3>
+            <div class="bg-color-sky-light">
+                <div class="section-seperator">
+                    <div class="content-lg container">
+                        <div class="row">
+                            <h3><a href="#">For inquiries, you may contact us at the email below.</a></h3>
                             <ul class="list-unstyled contact-list">
-                                <li><i class="margin-r-10 color-base icon-envelope"></i><a href="mailto:kevin.meng.01@gmail.com">kevin.meng.01@gmail.com</a></li>
+                                <li><i class="margin-r-10 color-base icon-envelope"></i><a href="mailto:jhscsc@gmail.com">jhscsc@gmail.com</a></li>
                             </ul>
                         </div>
-                        <!-- End Contact List -->
-
-                        <!-- Contact List -->
-                        <div class="col-sm-4 sm-margin-b-50">
-                            <h3><a href="#">Christopher Zhou</a> <span class="text-uppercase margin-l-20">Co-Vice President</span></h3>
-                            <ul class="list-unstyled contact-list">
-                                <li><i class="margin-r-10 color-base icon-envelope"></i><a href="mailto:cxqzhou88@gmail.com">cxqzhou88@gmail.com</a></li>
-                            </ul>
-                        </div>
-                        <!-- End Contact List -->
-
-                        <!-- Contact List -->
-                        <div class="col-sm-4 sm-margin-b-50">
-                            <h3><a href="#">Nihar Annam</a> <span class="text-uppercase margin-l-20">Co-Vice President</span></h3>
-                            <ul class="list-unstyled contact-list">
-                                <li><i class="margin-r-10 color-base icon-envelope"></i><a href="mailto:nihar.annam@gmail.com">nihar.annam@gmail.com</a></li>
-                            </ul>
-                        </div>
-                        <!-- End Contact List -->
+                        <!--// end row -->
                     </div>
-                    <!--// end row -->
                 </div>
             </div>
             <!-- End Contact List -->
