add meeting times

--- a/index.html
+++ b/index.html
@@ -126,12 +126,15 @@
                     <!-- End Contact List -->
                 </div>
                 <br><br>
+                <h2>Our meeting times</h2>
+                <font color="black" size="3">We meet every Friday at Mr. London's room, 1151.</font>
+                <br><br>
                 <!--// end row -->
                 <!-- End Masonry Grid -->
                 <table style="width:100%">
                     <tr>
                         <td>
-                            <h2>Things  we will be covering this semester:</h2>
+                            <h2>Things we will be covering this semester:</h2>
                             <ul>
                                 <li>Variable types</li>
                                 <li>Mathematical Operators</li>
