--- a/index.html
+++ b/index.html
@@ -123,11 +123,16 @@
                         <img class="full-width img-responsive wow fadeInUp" src="img/500x500/01.jpg" alt="Portfolio Image" data-wow-duration=".3" data-wow-delay=".2s">
                         <br>
                     </div>
+                    <div class="col-sm-4 sm-margin-b-50">
+                        <h3><a href="#">Wayne London</a> <span class="text-uppercase margin-l-20"><font size="3"><b>Club Sponsor</b></font></span></h3>
+                        <img class="full-width img-responsive wow fadeInUp" src="img/wl_headshot.jpg" alt="Portfolio Image" data-wow-duration=".3" data-wow-delay=".2s">
+                        <br>
+                    </div>
                     <!-- End Contact List -->
                 </div>
                 <br><br>
-                <h2>Our meeting times</h2>
-                <font color="black" size="3">We meet every Friday at Mr. London's room, 1151.</font>
+                <h2>Weekly meeting times</h2>
+                <font color="black" size="3">We meet every Friday during A Block in Mr. London's room, 1151.</font>
                 <br><br>
                 <!--// end row -->
                 <!-- End Masonry Grid -->
