--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <div class="row">
                     <!-- Contact List -->
                     <div class="col-sm-4 sm-margin-b-50">
-                        <h3><a href="#">Kevin Meng</a> <span class="text-uppercase margin-l-20"><font size="3"><b>President</b></font></span></h3>
+                        <h3><a href="kmeng01.github.io" target="blank">Kevin Meng</a> <span class="text-uppercase margin-l-20"><font size="3"><b>President</b></font></span></h3>
                         <img class="full-width img-responsive wow fadeInUp" src="img/km_headshot.jpg" alt="Portfolio Image" data-wow-duration=".3" data-wow-delay=".2s">
                         <br>
                     </div>
@@ -124,7 +124,7 @@
                         <br>
                     </div>
                     <div class="col-sm-4 sm-margin-b-50">
-                        <h3><a href="#">Wayne London</a> <span class="text-uppercase margin-l-20"><font size="3"><b>Club Sponsor</b></font></span></h3>
+                        <h3><a href="https://www.pisd.edu/Domain/2974" target="blank">Wayne London</a> <span class="text-uppercase margin-l-20"><font size="3"><b>Club Sponsor</b></font></span></h3>
                         <img class="full-width img-responsive wow fadeInUp" src="img/wl_headshot.jpg" alt="Portfolio Image" data-wow-duration=".3" data-wow-delay=".2s">
                         <br>
                     </div>
