fix km headshot issue

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <!-- Contact List -->
                     <div class="col-sm-4 sm-margin-b-50">
                         <h3><a href="kmeng01.github.io" target="blank">Kevin Meng</a> <span class="text-uppercase margin-l-20"><font size="3"><b>President</b></font></span></h3>
-                        <img class="full-width img-responsive wow fadeInUp" src="img/km_headshot.jpg" alt="Portfolio Image" data-wow-duration=".3" data-wow-delay=".2s">
+                        <img class="full-width img-responsive wow fadeInUp" src="img/km_headshot.JPG" alt="Portfolio Image" data-wow-duration=".3" data-wow-delay=".2s">
                         <br>
                     </div>
                     <div class="col-sm-4 sm-margin-b-50">
