add maxwell jiang to officer list

--- a/index.html
+++ b/index.html
@@ -123,12 +123,19 @@
                         <img class="full-width img-responsive wow fadeInUp" src="img/500x500/01.jpg" alt="Portfolio Image" data-wow-duration=".3" data-wow-delay=".2s">
                         <br>
                     </div>
+                    <!-- End Contact List -->
+                </div>
+                <div class="row"> 
+                    <div class="col-sm-4 sm-margin-b-50">
+                        <h3><a href="#">Maxwell Jiang</a> <span class="text-uppercase margin-l-20"><font size="3"><b>Vice President</b></font></span></h3>
+                        <img class="full-width img-responsive wow fadeInUp" src="img/500x500/01.jpg" alt="Portfolio Image" data-wow-duration=".3" data-wow-delay=".2s">
+                        <br>
+                    </div>
                     <div class="col-sm-4 sm-margin-b-50">
                         <h3><a href="https://www.pisd.edu/Domain/2974" target="blank">Wayne London</a> <span class="text-uppercase margin-l-20"><font size="3"><b>Club Sponsor</b></font></span></h3>
                         <img class="full-width img-responsive wow fadeInUp" src="img/wl_headshot.jpg" alt="Portfolio Image" data-wow-duration=".3" data-wow-delay=".2s">
                         <br>
                     </div>
-                    <!-- End Contact List -->
                 </div>
                 <br><br>
                 <h2>Weekly meeting times</h2>
