--- a/index.html
+++ b/index.html
@@ -109,17 +109,17 @@
                 <div class="row">
                     <!-- Contact List -->
                     <div class="col-sm-4 sm-margin-b-50">
-                        <h3><a href="kmeng01.github.io" target="blank">Kevin Meng</a> <span class="text-uppercase margin-l-20"><font size="3"><b>President</b></font></span></h3>
+                        <h3><a href="https://kmeng01.github.io" target="blank">Kevin Meng</a> <span class="text-uppercase margin-l-20"><font size="3"><b>President</b></font></span></h3>
                         <img class="full-width img-responsive wow fadeInUp" src="img/km_headshot.JPG" alt="Portfolio Image" data-wow-duration=".3" data-wow-delay=".2s">
                         <br>
                     </div>
                     <div class="col-sm-4 sm-margin-b-50">
-                        <h3><a href="#">Christopher Zhou</a> <span class="text-uppercase margin-l-20"><font size="3"><b>Vice President</b></font></span></h3>
+                        <h3><a href="#about">Christopher Zhou</a> <span class="text-uppercase margin-l-20"><font size="3"><b>Vice President</b></font></span></h3>
                         <img class="full-width img-responsive wow fadeInUp" src="img/500x500/01.jpg" alt="Portfolio Image" data-wow-duration=".3" data-wow-delay=".2s">
                         <br>
                     </div>
                     <div class="col-sm-4 sm-margin-b-50">
-                        <h3><a href="#">Nihar Annam</a> <span class="text-uppercase margin-l-20"><font size="3"><b>Vice President</b></font></span></h3>
+                        <h3><a href="#about">Nihar Annam</a> <span class="text-uppercase margin-l-20"><font size="3"><b>Vice President</b></font></span></h3>
                         <img class="full-width img-responsive wow fadeInUp" src="img/500x500/01.jpg" alt="Portfolio Image" data-wow-duration=".3" data-wow-delay=".2s">
                         <br>
                     </div>
@@ -127,7 +127,7 @@
                 </div>
                 <div class="row"> 
                     <div class="col-sm-4 sm-margin-b-50">
-                        <h3><a href="#">Maxwell Jiang</a> <span class="text-uppercase margin-l-20"><font size="3"><b>Vice President</b></font></span></h3>
+                        <h3><a href="#about">Maxwell Jiang</a> <span class="text-uppercase margin-l-20"><font size="3"><b>Vice President</b></font></span></h3>
                         <img class="full-width img-responsive wow fadeInUp" src="img/500x500/01.jpg" alt="Portfolio Image" data-wow-duration=".3" data-wow-delay=".2s">
                         <br>
                     </div>
