hide awards section (temporary)

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#pricing">Pricing</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#work">Work</a></li>
                                 -->
-                                <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#awards">Awards</a></li>
+                                <li class="js_nav-item nav-item" style="display: none;"><a class="nav-item-child nav-item-hover" href="#awards">Awards</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#contact">Contact</a></li>
                             </ul>
                         </div>
@@ -279,7 +279,7 @@
         <!-- End Weekly Meetings -->
 
         <!-- Awards -->
-        <div id="awards">
+        <div id="awards" style="display: none;">
             <div class="bg-color-sky-light" data-auto-height="true">
                 <div class="content-lg container">
                     <div class="row margin-b-40">
