--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         </div>
         <!-- End Weekly Meetings -->
         <!-- Awards -->
-        <div id="awards">
+        <div id="awards" style="display: none;">
                 <div class="content-lg container">
                     <div class="row margin-b-40">
                         <div class="col-sm-6">
