--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                         <div class="row">
                             <h3><a href="#">For inquiries, you may contact us at the email below.</a></h3>
                             <ul class="list-unstyled contact-list">
-                                <li><i class="margin-r-10 color-base icon-envelope"></i><a href="mailto:jhscsc@gmail.com">jhscsc@gmail.com</a></li>
+                                <li><i class="margin-r-10 color-base icon-envelope"></i><a href="mailto:jhscsc1718@gmail.com">jhscsc1718@gmail.com</a></li>
                             </ul>
                         </div>
                         <!--// end row -->
