--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#pricing">Pricing</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#work">Work</a></li>
                                 -->
-                                <li class="js_nav-item nav-item" style="display: none;"><a class="nav-item-child nav-item-hover" href="#awards">Awards</a></li>
+                                <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#awards">Awards</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#contact">Contact</a></li>
                             </ul>
                         </div>
@@ -185,12 +185,12 @@
         </div>
         <!-- End Weekly Meetings -->
         <!-- Awards -->
-        <div id="awards" style="display: none;">
+        <div id="awards">
                 <div class="content-lg container">
                     <div class="row margin-b-40">
                         <div class="col-sm-6">
-                            <h2>Services</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incididunt ut laboret dolore magna aliqua enim minim veniam exercitation</p>
+                            <h2>Awards</h2>
+                            <p>Students at the Jasper High School Computer Science Club are exceptionally talented. Below are some awards current and past members and leaders of the JHSCSC have earned.</p>
                         </div>
                     </div>
                     <!--// end row -->
@@ -202,7 +202,7 @@
                                     <i class="service-icon icon-chemistry"></i>
                                 </div>
                                 <div class="service-info">
-                                    <h3>Art Of Coding</h3>
+                                    <h3>United States of America Computing Olympiad</h3>
                                     <p class="margin-b-5">Lorem ipsum dolor amet consectetur ut consequat siad esqudiat dolor</p>
                                 </div>
                                 <a href="#" class="content-wrapper-link"></a>    
@@ -214,7 +214,7 @@
                                     <i class="service-icon color-white icon-screen-tablet"></i>
                                 </div>
                                 <div class="service-info">
-                                    <h3 class="color-white">Responsive Design</h3>
+                                    <h3 class="color-white">Lockheed Martin National CodeQuest Competition</h3>
                                     <p class="color-white margin-b-5">Lorem ipsum dolor amet consectetur ut consequat siad esqudiat dolor</p>
                                 </div>
                                 <a href="#" class="content-wrapper-link"></a>    
@@ -226,7 +226,7 @@
                                     <i class="service-icon icon-badge"></i>
                                 </div>
                                 <div class="service-info">
-                                    <h3>Feature Reach</h3>
+                                    <h3>HP CodeWars</h3>
                                     <p class="margin-b-5">Lorem ipsum dolor amet consectetur ut consequat siad esqudiat dolor</p>
                                 </div>
                                 <a href="#" class="content-wrapper-link"></a>    
