--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
                     <!--// end row -->
                     <h3>Meeting 8</h3>
                     <table style="width:100%">
-                        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTH30YvB9DqFOawcORlJu8SbWRqStMvLA2icYOXR4Q7pkp54vx8EMSuLxYXH2scRqBXhsNay1oxdox0/embed?start=false&loop=false&delayms=3000" frameborder="0" width="50%" height="500px" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-						<tr><iframe frameborder="0" width="50%" height="500px" src="https://repl.it/MQ7W?lite=true"></iframe></tr>
+			    <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSPEqVa3SW42WQuYXgouX-tbHJg3CIWMCmE_QW5QtDd83CzwcV-PSTpfkLBRCSfIqErjUdUAPBoyPBo/embed?start=false&loop=false&delayms=3000" frameborder="0" width="50%" height="500px" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+						<tr><iframe frameborder="0" width="50%" height="500px" src="https://repl.it/?lite=true"></iframe></tr>
                     </table><br>
                 </div>
             </div>
