--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                     <h3>Meeting 12</h3>
                     <table style="width:100%">
                         <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRIuWJxk6gas1HXjhPB0GnHEF9zU1qwwF58cCPPv4VZrb73GA52pzVMto4dcYuZMvkimzu0mkg7cnzu/embed?start=false&loop=false&delayms=3000" frameborder="0" width="50%" height="500px" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-						<tr><iframe frameborder="0" width="50%" height="500px" src="https://repl.it/?lite=true"></iframe></tr>
+						<tr><iframe frameborder="0" width="50%" height="500px" src="https://repl.it/repls/AmbitiousDistantGander?lite=true"></iframe></tr>
                     </table><br>
                 </div>
             </div>
