update awards section

--- a/index.html
+++ b/index.html
@@ -202,8 +202,9 @@
                                     <i class="service-icon icon-chemistry"></i>
                                 </div>
                                 <div class="service-info">
-                                    <h3>United States of America Computing Olympiad</h3>
-                                    <p class="margin-b-5">Lorem ipsum dolor amet consectetur ut consequat siad esqudiat dolor</p>
+                                    <h3>Lockheed Martin National CodeQuest Competition</h3>
+                                    <p class="margin-b-5"><b>National Runner Up, Novice Division</b></p>
+                                    <p class="margin-b-5">Kevin Meng, Maxwell Jiang, Christopher Zhou</p>
                                 </div>
                                 <a href="#" class="content-wrapper-link"></a>    
                             </div>
@@ -214,8 +215,9 @@
                                     <i class="service-icon color-white icon-screen-tablet"></i>
                                 </div>
                                 <div class="service-info">
-                                    <h3 class="color-white">Lockheed Martin National CodeQuest Competition</h3>
-                                    <p class="color-white margin-b-5">Lorem ipsum dolor amet consectetur ut consequat siad esqudiat dolor</p>
+                                    <h3 class="color-white">United States of America Computing Olympiad</h3>
+                                    <p class="color-white margin-b-5"><b>Gold Division:</b><br>Kevin Meng, Maxwell Jiang, Christopher Zhou</p>
+                                    <p class="color-white margin-b-5"><b>Silver Division:</b><br>Derek Qin, Jonathan Li</p>
                                 </div>
                                 <a href="#" class="content-wrapper-link"></a>    
                             </div>
@@ -226,8 +228,9 @@
                                     <i class="service-icon icon-badge"></i>
                                 </div>
                                 <div class="service-info">
-                                    <h3>HP CodeWars</h3>
-                                    <p class="margin-b-5">Lorem ipsum dolor amet consectetur ut consequat siad esqudiat dolor</p>
+                                    <h3>Google CodeJam Worldwide Contest</h3>
+                                    <p class="margin-b-5"><b>Round 1 Qualifiers</b></p>
+                                    <p class="margin-b-5">Kevin Meng, Maxwell Jiang</p>
                                 </div>
                                 <a href="#" class="content-wrapper-link"></a>    
                             </div>
